--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         the page itself.
     </p>
     
+
+    <a href="https://brew.sh">Homebrew Home page</a>
+
+    <p><strong>find out more about homebrew</strong>just follow the above link to learn more about homebrew.
+        
 </body>
 </html>
 
